This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Refleak in PyMethodObject repr
Type: resource usage Stage: resolved
Components: Interpreter Core Versions: Python 3.2, Python 3.3
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: asvetlov Nosy List: asvetlov, python-dev
Priority: normal Keywords: patch

Created on 2012-07-20 11:42 by asvetlov, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
leak.diff asvetlov, 2012-07-20 11:46 review
Messages (2)
msg165913 - (view) Author: Andrew Svetlov (asvetlov) * (Python committer) Date: 2012-07-20 11:42
Python leaks in method.__repr__ if class has no __name__.
Very rare situation.
msg165915 - (view) Author: Roundup Robot (python-dev) (Python triager) Date: 2012-07-20 11:57
New changeset 4b724884c81f by Andrew Svetlov in branch '3.2':
Issue #15404: Refleak in PyMethodObject repr.
http://hg.python.org/cpython/rev/4b724884c81f
History
Date User Action Args
2022-04-11 14:57:33adminsetgithub: 59609
2012-07-20 12:07:35asvetlovsettype: resource usage
stage: resolved
2012-07-20 11:59:08asvetlovsetstatus: open -> closed
resolution: fixed
2012-07-20 11:57:53python-devsetnosy: + python-dev
messages: + msg165915
2012-07-20 11:46:51asvetlovsetfiles: + leak.diff
2012-07-20 11:46:38asvetlovsetfiles: - leak.diff
2012-07-20 11:42:53asvetlovcreate