Issue #15404: Refleak in PyMethodObject repr.